SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect

- 27/07/2004, version 1.75: roms
	Olivier's suggestions:
	- synch Code/Window menu with state of other windows (show/hide)
	- minimize/maximize all windows when touching calc or code window. Could be better...
	- can't step after bkpt: fixed.
	- mem_dbox: show headers, removed stack, refreshed on step, tab refreshed when scrolling,
	- mem_dbox:	improved scrolling and browsing
	- step over was buggy (no single step on insts other than jsr/bsr)
	- code_dbox: improved scrolling and browsing
	- avoid selection and green bar to be masked
	- code_dbox: can add mem tab at address
	- mem_dbox: can disasm at address and added popup menu
	- mem_dbox: can update multiple bytes at once
	- regs_dbox: can open a mem tab with register value
	- new window: stack
	- regs_dbox: added Status Register window (1 button per bit)
	- mem_dbox: replaced '+A' header by absolute address
	- mem_dbox: searching capability (find first only)

- 14/07/2004, version 1.74: roms
	Fixes from Lionel, Kevin and Olivier's suggestions:
	- when scrolling down in the code window, the bar is now reset 
	(hide first instruction).
	- reject some SAV images due to IMG_INFO structure (memcmp)
	- improved popup menu (slow down)
	- popup menu available when debugger is opened
	- rebuilt under Linux
	- fixed bug with SDCB in the VTi's disassembler
	- modified VTi's disasm to show F-Line ROM calls
	- completely rewritten debugging layer and added Step Out mode

- 12/07/2004, version 1.73: roms
	SDL removed for GTK: screen and keyboard support rewritten from 
	scratch !
	Debugger raised on event from m68k thread: less CPU intensive but 
	could be better.
	HW1 protection is emulated excepted for archive memory limit.

- 07/07/2004, version 1.72: roms
	Error management connected and updated.
	Fixed 'restrict to current speed'.
	Synch item disabled for now.